# KITabytes

./: .env.example  .gitignore  AGENTS.md  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
backend/: requirements.txt
backend/app/: config.py  db.py  main.py  uuid_maps.py
backend/app/routes/: chat.py  data.py
backend/app/services/: ai_service.py  data_service.py  stats_service.py
backend/tests/: conftest.py  test_data_service.py  test_stats_service.py  test_uv_project.py
docs/: BACKEND_WALKTHROUGH.md  DATABASE_STRUCTURE.md
frontend/: index.html  package-lock.json  package.json
mongodb/: README.md  docker-compose.yaml
mongodb/ssl/: mongodb.crt  mongodb.key  mongodb.pem
